---------------------------------------------------------------------------------------------------
Version: 0.69.35
Date: ????
  Changes:
    - Fixed weird save bug.
    - Added cross-tech with Cubium.
    - Rubia assets version+ to match with the asset for the Cubium tech.
---------------------------------------------------------------------------------------------------
Version: 0.69.34
Date: 2025-05-24
  Changes:
    - Fixed a technology bug from the last patch. Sorry!
---------------------------------------------------------------------------------------------------
Version: 0.69.33
Date: 2025-05-24
  Balancing:
    - Eff4 mods nerfed from -1% speed to -2% speed.
    - Trashsteroid laser resistance 60%=>85%.
    - Lyrical music more rare.
  Bugfixes:
    - My mod no longer crashes with Tapatrion. Tapatrion now crashes all by itself.
    - Fixed a bug that would stop you from loading the map due to stale trashsteroid data.
---------------------------------------------------------------------------------------------------
Version: 0.69.32
Date: 2025-05-24
  Changes:
    - Simple Adjustable inserter compatibility
    - Smart inserters compatibility
    - Fixed a bug that caused some trashsteroids to hover in place... menacingly! It affected some users, primarily when loading new mod configurations.
---------------------------------------------------------------------------------------------------
Version: 0.69.31
Date: 2025-05-24
  Changes:
    - Armored fluid wagon now takes fluid wagons instead of cargo wagons.
    - Reordered recipe/items of several rubia recipes and items.
    - Fixed a big bug where Muluna would cause all rail materials to be automatically banned.
    - Broadened compatibility for logistic containers, including Bob's Logistics and AAI containers.
    - Rubia assets version up, because new bacterial sludge icon.
---------------------------------------------------------------------------------------------------
Version: 0.69.30